tests/snapshots/file@class@local_reference_self.lox.snap
---
source: tests/common/mod.rs
description: "{\n  class Foo {\n    returnSelf() {\n      return Foo;\n    }\n  }\n\n  print Foo().returnSelf(); // expect: Foo\n}\n"
input_file: crafting_interpreters_test_files/class/local_reference_self.lox
---
OUT: 
<class Foo>

===
ERR:
