tests/snapshots/file@class@reference_self.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  returnSelf() {\n    return Foo;\n  }\n}\n\nprint Foo().returnSelf(); // expect: Foo\n"
input_file: crafting_interpreters_test_files/class/reference_self.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected RBrace, found 'ident'
   ╭─[2:3]
 1 │ class Foo {
 2 │   returnSelf() {
   ·   ─────┬────
   ·        ╰── here
 3 │     return Foo;
   ╰────
Error:   × can't return from top-level code
   ╭─[3:5]
 2 │   returnSelf() {
 3 │     return Foo;
   ·     ───┬──
   ·        ╰── here
 4 │   }
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[4:3]
 3 │     return Foo;
 4 │   }
   ·   ┬
   ·   ╰── here
 5 │ }
   ╰────
